[gd_scene load_steps=2 format=3 uid="uid://u0e5l8v2mytq"]

[ext_resource type="Script" uid="uid://b2jadqayiuvn0" path="res://Util/Mmo_Logic/mob_spawner.gd" id="1_t6yyg"]

[node name="MobSpawner" type="Area2D"]
script = ExtResource("1_t6yyg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
